tests/ui/conflict_transform_into.stderr
error: expected identifier, found `::`
  --> tests/ui/conflict_transform_into.rs:12:10
   |
12 | #[derive(DtoFrom)]
   |          ^^^^^^^
   |          |
   |          expected identifier
   |          while parsing this struct
   |
   = note: this error originates in the derive macro `DtoFrom` (in Nightly builds, run with -Z macro-backtrace for more info)

error: proc-macro derive produced unparsable tokens
  --> tests/ui/conflict_transform_into.rs:12:10
   |
12 | #[derive(DtoFrom)]
   |          ^^^^^^^

error[E0063]: missing field `display` in initializer of `Dto`
  --> tests/ui/conflict_transform_into.rs:12:10
   |
12 | #[derive(DtoFrom)]
   |          ^^^^^^^ missing `display`
   |
   = note: this error originates in the derive macro `DtoFrom` (in Nightly builds, run with -Z macro-backtrace for more info)
